# content-discovery-agent

./: .content-discovery.toml.example  .gitignore  CLAUDE.md  README.md  config.py  content_discovery.py  feed_cache.py  feed_reader.py  inbox_writer.py  logic.py  providers.py  pyproject.toml  readwise.py  scorer.py  state.py  store.py  url_utils.py
providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  groq_provider.py  local.py
social/: __init__.py  article_fetcher.py  base.py  bluesky.py  mastodon.py
src/: main.py
src/discovery/: config.py  db_commands.py  feed_cache.py  feed_reader.py  logic.py  options.py  orchestrator.py  readwise.py  scorer.py  session.py  store.py
src/discovery/social/: __init__.py  article_fetcher.py  base.py  bluesky.py  interfaces.py  mastodon.py
tests/: test_article_fetcher.py  test_backup_restore.py  test_db_commands.py  test_feed_cache.py  test_feed_reader.py  test_inbox_writer.py  test_options.py  test_readwise.py  test_readwise_routing.py  test_save_command.py  test_scorer.py  test_social_bluesky.py  test_social_mastodon.py  test_state.py  test_store.py  test_store_analytics.py  test_store_core.py
tests/fixtures/: sample_article.html  sample_bluesky_response.json  sample_feed.xml  sample_mastodon_response.json  sample_scored.json
