[project]
name = "content-discovery-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.12",
    "google-genai>=1.66.0",
    "local-first-common",
    "requests>=2.32.5",
    "typer>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", branch = "main" }
