[project]
name = "content-discovery-agent"
version = "0.1.0"
description = "Score RSS feeds and social sources for relevance; store candidates in SQLite for review"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "feedparser>=6.0.12",
    "google-genai>=1.66.0",
    "local-first-common",
    "requests>=2.32.5",
    "typer>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { path = "../local-first-common", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
