[project]
name = "content-discovery-agent"
version = "0.1.0"
description = "Score RSS feeds and social sources for relevance; store candidates in SQLite for review"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "local-first-common",
    "requests>=2.32.5",
    "typer>=0.15.0",
]

[project.scripts]
discover = "discovery.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", rev = "main" }

[tool.pytest.ini_options]
pythonpath = ["src"]
